# tracker

./: .editorconfig  .env.example  .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  deps.py  plan_limits.py  security.py
backend/app/db/: supabase.py
backend/app/routers/: agent.py  (+20 more)
backend/scripts/: bench.py
backend/tests/: conftest.py  test_activity_router.py  test_activity_service.py  test_agent_router.py  test_agent_service.py  test_billing_router.py  test_charts_service.py  test_comments_router.py  test_comments_service.py  test_config.py  test_dependencies_service.py  test_deps.py  test_health.py  test_issues_router.py  test_issues_service.py  test_labels_router.py  test_labels_service.py  test_me.py  test_members_router.py  test_notifications_router.py  test_notifications_service.py  test_projects_router.py  test_projects_service.py  test_resolve_router.py  test_resolve_service.py  test_security.py  test_sprints_router.py  test_sprints_service.py  test_stale_session.py  test_supabase_client.py  test_tasks_router.py  test_tasks_service.py  test_workspaces_router.py  test_workspaces_service.py
trackly-mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
trackly-mcp/tests/: test_app.py  test_archive.py  test_client_passthrough.py  test_config.py  test_context.py  test_middleware.py  test_oauth_routes.py  test_picker.py  test_resolve_scoping.py  test_smoke.py  test_state.py  test_supabase.py  test_validators.py
(+272 files in other folders)
