[project]
name = "trackly-mcp"
version = "0.1.0"
description = "MCP server that exposes the Trackly task tracker to Claude / Cursor / Claude Desktop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.4",
    "httpx>=0.27",
    "pyjwt>=2.8",
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
trackly-mcp = "trackly_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trackly_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
